add tests and file support

--- a/dune
+++ b/dune
@@ -2,9 +2,12 @@
 (name template_engine)
 (public_name template_engine)
 (synopsis "Small template engine for OCaml")
+(inline_tests)
 (libraries sedlex core uutf menhirLib ppxlib containers)
  (preprocess
   (pps sedlex.ppx ppx_inline_test))
   (flags :standard -w +39))
 
 (menhir  (flags --table --canonical) (modules parser))
+
+(copy_files test/*)
