--- a/template_engine.opam
+++ b/template_engine.opam
@@ -8,9 +8,9 @@ Simple template engine for OCaml
 maintainer: "Emile Trotignon emile.trotignon@gmail.com"
 authors: "Emile Trotignon emile.trotignon@gmail.com"
 license: "MIT"
-homepage: "None yet"
-bug-reports: ""
-dev-repo: ""
+homepage: "https://emiletrotignon.github.io/ocaml_template_engine/"
+bug-reports: "https://github.com/EmileTrotignon/ocaml_template_engine/issues"
+dev-repo: "git+https://github.com/EmileTrotignon/ocaml_template_engine.git"
 depends: [ "ocaml" "ocamlfind" ]
 build: [
   ["./configure" "--prefix=%{prefix}%"]
